# goit-python-hw-07

./: README.md  README_EN.md  README_UA.md
packaged-with-poetry/: README.md  pyproject.toml  requirements.txt  setup.py
packaged-with-poetry/clean_folder/: sort.py
packaged-with-setuptools/: README.md
packaged-with-setuptools/clean_folder/: sort-final.py  sort.py  sort.py2
